modify theme header

--- a/themes/landscape/source/css/_variables.styl
+++ b/themes/landscape/source/css/_variables.styl
@@ -35,8 +35,7 @@ line-height-title = 1.1em
 // Header
 logo-size = 40px
 subtitle-size = 16px
-banner-height = 300px
-banner-url = "images/banner.jpg"
+header-height = 80px
 
 sidebar = hexo-config("sidebar")
 
