--- a/themes/landscape/source/css/_partial/header.styl
+++ b/themes/landscape/source/css/_partial/header.styl
@@ -1,7 +1,8 @@
 #header
-  height: banner-height
+  height: header-height
   position: relative
   border-bottom: 1px solid color-border
+  background-color: black
   &:before, &:after
     content: ""
     position: absolute
@@ -23,18 +24,17 @@
   position: relative
   overflow: hidden
 
-#banner
-  position: absolute
-  top: 0
-  left: 0
-  width: 100%
-  height: 100%
-  background: url(banner-url) center #000
-  background-size: cover
-  z-index: -1
+// #banner
+//   position: absolute
+//   top: 0
+//   left: 0
+//   width: 100%
+//   height: 100%
+//   background: #000
+//   background-size: cover
+//   z-index: -1
 
 #header-title
-  text-align: center
   height: logo-size
   position: absolute
   top: 50%
@@ -61,10 +61,6 @@ $logo-text
 
 #subtitle-wrap
   margin-top: subtitle-size
-
-#main-nav
-  float: left
-  margin-left: -15px
 
 $nav-link
   float: left
@@ -96,14 +92,14 @@ $nav-link
   @media mq-mobile
     display: none
 
-#main-nav-toggle
+#nav-toggle
   display: none
   &:before
     content: "\f0c9"
   @media mq-mobile
     display: block
 
-#sub-nav
+#nav
   float: right
   margin-right: -15px
 
