--- a/css/style.css
+++ b/css/style.css
@@ -308,9 +308,10 @@ body {
   font-weight: bold;
 }
 #header {
-  height: 300px;
+  height: 80px;
   position: relative;
   border-bottom: 1px solid #ddd;
+  background-color: #000;
 }
 #header:before,
 #header:after {
@@ -342,20 +343,7 @@ body {
   position: relative;
   overflow: hidden;
 }
-#banner {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url("images/banner.jpg") center #000;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  z-index: -1;
-}
 #header-title {
-  text-align: center;
   height: 40px;
   position: absolute;
   top: 50%;
@@ -381,10 +369,6 @@ body {
 }
 #subtitle-wrap {
   margin-top: 16px;
-}
-#main-nav {
-  float: left;
-  margin-left: -15px;
 }
 .nav-icon,
 .main-nav-link {
@@ -423,18 +407,18 @@ body {
     display: none;
   }
 }
-#main-nav-toggle {
+#nav-toggle {
   display: none;
 }
-#main-nav-toggle:before {
+#nav-toggle:before {
   content: "\f0c9";
 }
 @media screen and (max-width: 479px) {
-  #main-nav-toggle {
+  #nav-toggle {
     display: block;
   }
 }
-#sub-nav {
+#nav {
   float: right;
   margin-right: -15px;
 }
@@ -1367,8 +1351,4 @@ pre .javascript .function {
 .tag-list-count:after,
 .archive-list-count:after {
   content: ")";
-}
-.tagcloud a {
-  margin-right: 5px;
-  display: inline-block;
 }
