switch to utterances

--- a/themes/vexo/layout/page.ejs
+++ b/themes/vexo/layout/page.ejs
@@ -55,6 +55,7 @@
         repo="<%= theme['utterances_repo'] %>"
         issue-term="<%= theme['utterances_issue_term'] %>"
         theme="<%= theme['utterances_theme'] %>"
+        label="comment"
         crossorigin="anonymous"
         async></script>    
       <!-- Utterances END -->
